<resources>
    <string name="app_name">Cookery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_my_recipes">Мои рецепты</string>
    <string name="menu_drafts">Черновики</string>
    <string name="menu_settings">Настройки</string>


    <string name="title_user_page">личная страница</string>
    <string name="title_main_page">Главная</string>
    <string name="title_shopping_list">Лист покупок</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="liked_recipes">Понравившиеся</string>
    <string name="drafts">Черновики</string>
    <string name="registration">Регистрация</string>
    <string name="ingredients">Ингредиенты:</string>
    <string name="cookingsteps">Приготовление:</string>
    <string name="additional_info">Дополнительная информация</string>
    <string name="name">Имя</string>
    <string name="cookery_title">cookery</string>
    <string name="fa_book_open">\uf518</string>
    <string name="fa_user_circle">\uf2bd</string>
    <string name="fa_bread_slice">\uf7ec</string>
    <string name="fa_copy">\uf0c5</string>
    <string name="fa_heart">\uf004</string>
    <string name="fa_edit">\uf044</string>
    <string name="fa_plus_circle">\uf055</string>
    <string name="fa_arrow_right">\uf054</string>
    <string name="fa_arrow_left">\uf060</string>
    <string name="enter_name">Введите имя:</string>
    <string name="enter_email">Введите e-mail:</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="log_out">\uf2f5</string>
    <string name="search">поиск</string>
    <string name="breakfast">Завтраки</string>
    <string name="lunch">Обеды</string>
    <string name="dinner">Ужины</string>
    <string name="dessert">Десерты</string>
    <string name="category">Категория:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>