<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_my_recipes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_edit_black"
            android:title="@string/menu_drafts" />
        <item
            android:id="@+id/nav_liked_recipes"
            android:icon="@drawable/ic_like"
            android:title="@string/liked_recipes"/>
        <item
            android:id="@+id/nav_shop_list"
            android:icon="@drawable/ic_list"
            android:title="@string/title_shopping_list"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>