<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookeryfinal.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_recipes"
        android:name="com.example.cookeryfinal.ui.MyRecipesFragment"
        android:label="@string/menu_my_recipes"
        tools:layout="@layout/fragment_my_recipes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cookeryfinal.ui.DraftsFragment"
        android:label="@string/menu_drafts"
        tools:layout="@layout/fragment_drafts" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.cookeryfinal.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>