<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:id="@+id/layout_register"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/lemonTuesday"
            style="@style/TextFont_lemTue"
            android:textStyle="bold"
            android:text="@string/registration"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/orange_red"
            android:textSize="50sp"
            android:layout_marginTop="160dp"/>

        <EditText
            android:id="@+id/name_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/password_signIn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Введите пароль еще раз:"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Зарегистрироваться"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:backgroundTint="@color/darker_pink"
            android:layout_marginTop="60dp"
            android:onClick="btnRegister_clicked"/>
    </LinearLayout>

</RelativeLayout>